--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "mpi.h": "c"
+        "mpi.h": "c",
+        "terarec.h": "c",
+        "omp.h": "c"
     }
 }
